--- a/Employee.Infrastructure/WebApi.Infrastructure.csproj
+++ b/Employee.Infrastructure/WebApi.Infrastructure.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="MySqlConnector" Version="1.3.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Employee.Core\WebApi.Core.csproj" />
   </ItemGroup>
 
